--- a/views/login.html
+++ b/views/login.html
@@ -28,20 +28,20 @@ rel="stylesheet" />
         </div>
         <nav>
             <ul class="nav-1">
-                <li><a href="#">Ofertas</a></li>
-                <li><a href="#">Tiendas Oficiales</a></li>
-                <li><a href="#">Vender</a></li>
-                <li><a href="#">Ayuda</a></li>
+                <li><a href="">Ofertas</a></li>
+                <li><a href="">Tiendas Oficiales</a></li>
+                <li><a href="">Vender</a></li>
+                <li><a href="">Ayuda</a></li>
             </ul>
             
             <ul class="nav-2">
                 <li><a href="/register">Creá tu cuenta <i class="far fa-address-card"></i></a></li>
                 <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+                <li><a href="">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
 
-        <a class="burger" href="#"><i class="fas fa-bars"></i></a>
+        <a class="burger" href=""><i class="fas fa-bars"></i></a>
     </header>
 
     <main>
