--- a/views/register.html
+++ b/views/register.html
@@ -89,19 +89,21 @@
                 <label for="intereses">Vida sana</label>
             </div>
 
-            <label for="fotoPerfil"  class="subtitulos">Selecciona una foto de perfil</label>
+            <label for="fotoPerfil" class="subtitulos">Selecciona una foto de perfil</label>
             <input type="file" name="fotoPerfil" accept=".jpg" class="img-upload" required>
 
             <label for="contraseña">Ingrese su contraseña</label>
             <input type="password" name="contraseña" class="input-password" required>
             <label for="contraseña">Reingrese su contraseña</label>
             <input type="password" class="input-password" required>
+                      
+                    <button type="submit" name="submit">Enviar</button>
+                <form action="/">
+                    <button type="reset" name=" reset">Eliminar</button>
+                </form>
+           
 
-            <button type="submit" name="submit">Enviar</button>
-            <button type="reset" name=" reset">Eliminar</button>
-
-
-        </form>
+        
     </main>
 
     <footer>
